@@ -1,3 +1,10 @@
+2005-10-18  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/22147
+	Backport 2005-09-27  Mark Mitchell  <mark@codesourcery.com>
+	* g++.dg/template/friend37.C: New test.
+	* g++.dg/parse/crash28.C: Adjust error markers.
+
 2005-10-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/22293
