@@ -1,3 +1,13 @@
+2005-10-18  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/22147
+	Backport 2005-09-27  Mark Mitchell  <mark@codesourcery.com>
+	* name-lookup.c (maybe_process_template_type_declaration): Don't
+	treat forward declarations of classes as templates just because
+	we're processing_template_decl.
+	* pt.c (tsubst_decl): Clear DECL_TEMPLATE_INFO for friend
+	functions.
+
 2005-10-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/22293
